# FRE2021_test

ball_detection/: CMakeLists.txt  package.xml
ball_detection/launch/: start_image_detector-backup.launch  start_image_detector.launch  start_image_detector_tennisball.launch
ball_detection/src/: ball_detection-backup.cpp  ball_detection.cpp
basic_navigation/: CMakeLists.txt
basic_navigation/launch/: start_PointFollower.launch
basic_navigation/src/: Point_Follower.cpp  Point_Follower_old.cpp
fieldrobot_event2017/: CMakeLists.txt  package.xml
fieldrobot_event2017/launch/: filter_base.yaml  start_ball_mapping.launch  start_point_follower.launch  start_point_follower_backup.launch  start_robot.launch  start_row_follower.launch  start_row_follower_backup.launch  start_row_follower_backwards.launch  start_task1.launch  start_task1_gazebo.launch  start_task2.launch  start_task3.launch  start_task4.launch
fieldrobot_event2017/launch/legacy/: ancient_start_row_follower.launch  old_start_row_follower.launch  row_follower+headland.launch
fieldrobot_event2017/launch/navigation/: start_goalmanager_back_and_forward.launch  start_pattern_1L.launch  start_pattern_1R.launch  start_pattern_2L.launch  start_pattern_2R.launch  start_pattern_3L.launch  start_pattern_3R.launch  start_pattern_4L.launch  start_pattern_4R.launch  start_pattern_5L.launch  start_pattern_5R.launch  start_pattern_test.launch  start_pattern_turn.launch
fieldrobot_event2017/scripts/: start_topics.sh
fieldrobot_event2017/waypoints/: 1L.txt  1L_backup.txt  1R.txt  1R_backup.txt  2L.txt  2R.txt  3L.txt  3R.txt  4L.txt  4R.txt  5L.txt  5R.txt  back_forward.txt  test.txt  turn.txt
gamepad/: CMakeLists.txt  package.xml
gamepad/launch/: start_joystick.launch
gamepad/src/: Logitech.h~  joystick_core.cpp
goal_manager/: CMakeLists.txt
goal_manager/launch/: robot_goal_manager_test.launch
goal_manager/src/: pathParser.cpp  robot_goal_creater.cpp
goal_manager/waypoints/: global_goals.txt  headland_left.txt
laser_row_detection/src/: ransac_line_generator.cpp  tf_row_publisher.cpp
laser_security/: CMakeLists.txt  package.xml
laser_security/launch/: start_laser_security_twist.launch
laser_security/src/: laser_security_node.cpp  laser_security_twist_node.cpp
mode_changer/: CMakeLists.txt  CMakeLists.txt.save  CMakeLists.txt.save.1  package.xml
mode_changer/launch/: start_mode_changer.launch
mode_changer/src/: mode_changer_twist.cpp
mode_control/: CMakeLists.txt  package.xml
mode_control/launch/: start_mode_controler_task1.launch  start_mode_controler_task2.launch  start_mode_controler_task3.launch
mode_control/src/: mode_control_task1_old.cpp  mode_control_task2.cpp  mode_control_task3.cpp  mode_control_task4.cpp  mode_control_toggle.cpp
motorcontroller/: CMakeLists.txt  package.xml
motorcontroller/launch/: start_motorcontrollers.launch
motorcontroller/src/: sdc2130_core.cpp
odometry/: CMakeLists.txt  package.xml
odometry/launch/: start_odometry.launch
odometry/src/: differential_odometry_node.cpp
pointcloud_plantdetector/: CMakeLists.txt
pointcloud_plantdetector/cfg/: Filter.cfg
pointcloud_plantdetector/launch/: box_filter.yaml  start_laser_clustering_front.launch  start_pointcloud_plantdetector.launch  start_row_follower_old.launch
pointcloud_plantdetector/launch/filters/: tilt_scan.yaml
pointcloud_plantdetector/src/: 3D_plant_detector.cpp  laser_row_filter.cpp
robot_model/: CMakeLists.txt  package.xml
robot_model/launch/: start_robot_model.launch
robot_model/urdf/: pinocchio_basic.urdf
