<?xml version="1.0"?>
<package>
  <name>gamepad</name>
  <version>0.0.0</version>
  <description>gamepad driver</description>

    <maintainer email="hp@todo.todo">hp</maintainer>
  <license>whatelse</license>

  <!-- <url type="website">http://ros.org/wiki/sdu_armadillo</url> -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
 
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>msgs</build_depend>
  <build_depend>roscpp</build_depend>
  
  <run_depend>msgs</run_depend>
  <run_depend>roscpp</run_depend>

  <export>
  </export>
</package>
